// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminLewAlert component Should create new alert 1`] = `
<div>
  <div
    class="row mb-4"
  >
    <div
      class="col-8 offset-2"
    >
      <div
        class="mb-3"
      >
        <div
          class="alert d-flex justify-content-between mt-3 bg-primary text-white"
          role="alert"
        >
          <div
            class="d-flex gap-3"
          >
            <img
              height="24"
              src="/assets/curriculum/icons/icon-tip.svg"
              width="24"
            />
             
            
          </div>
          <button
            class="alert-dismiss"
            data-testid="dismiss-info"
            role="dismiss"
          >
            <img
              src="/assets/curriculum/icons/dismiss-info.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="text-start"
      >
        <div
          class="row"
        >
          <div
            class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
          >
            <div
              class="p-0 card-body text-center align-self-start"
            />
            <div
              class="text-start"
            >
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spantext0"
                >
                  Text
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input0"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spantype1"
                >
                  Type
                </span>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    class="dropdown btn btn-primary"
                    id="dropdown-lesson"
                    type="button"
                  >
                    info
                    <svg
                      aria-hidden="true"
                      class="octicon octicon-chevron-right"
                      fill="currentColor"
                      height="17"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                      viewBox="0 0 16 16"
                      width="17"
                    >
                      <path
                        d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spanurl2"
                >
                  Url
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input2"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spanurlCaption3"
                >
                  Urlcaption
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input3"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="text-center align-self-start"
            >
              <button
                class="btn borderless btn-primary"
                style="color: rgb(255, 255, 255);"
              >
                Create New Alert
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdminLewAlert component Should refuse creating new alert with incomplete data 1`] = `
<div>
  <div
    class="row mb-4"
  >
    <div
      class="col-8 offset-2"
    >
      <div
        class="mb-3"
      >
        <div
          class="alert d-flex justify-content-between mt-3 bg-primary text-white"
          role="alert"
        >
          <div
            class="d-flex gap-3"
          >
            <img
              height="24"
              src="/assets/curriculum/icons/icon-tip.svg"
              width="24"
            />
             
            <a
              class="text-white noUnderline"
              href="url"
              rel="noopener noreferrer"
              target="_blank"
            >
              caption
            </a>
          </div>
          <button
            class="alert-dismiss"
            data-testid="dismiss-info"
            role="dismiss"
          >
            <img
              src="/assets/curriculum/icons/dismiss-info.svg"
            />
          </button>
        </div>
      </div>
      <div
        class="text-start"
      >
        <div
          class="row"
        >
          <div
            class="py-4 px-3 card shadow-sm col-12 align-items-stretch"
          >
            <div
              class="p-0 card-body text-center align-self-start"
            />
            <div
              class="text-start"
            >
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spantext0"
                >
                  Text
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input0"
                  placeholder=""
                  type="text"
                  value=""
                />
                <h6
                  class="text-danger mt-2 mb-0 optionInfo__error"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon octicon-alert-fill"
                    fill="currentColor"
                    height="14"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                    viewBox="0 0 12 12"
                    width="14"
                  >
                    <path
                      d="M4.855.708c.5-.896 1.79-.896 2.29 0l4.675 8.351a1.312 1.312 0 01-1.146 1.954H1.33A1.312 1.312 0 01.183 9.058L4.855.708zM7 7V3H5v4h2zm-1 3a1 1 0 100-2 1 1 0 000 2z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Required
                </h6>
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spantype1"
                >
                  Type
                </span>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    class="dropdown btn btn-primary"
                    id="dropdown-lesson"
                    type="button"
                  >
                    info
                    <svg
                      aria-hidden="true"
                      class="octicon octicon-chevron-right"
                      fill="currentColor"
                      height="17"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                      viewBox="0 0 16 16"
                      width="17"
                    >
                      <path
                        d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spanurl2"
                >
                  Url
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input2"
                  placeholder="url"
                  type="text"
                  value="url"
                />
              </div>
              <div
                class="d-flex flex-column mb-4"
              >
                <span
                  class="optionInfo__span"
                  data-testid="spanurlCaption3"
                >
                  Urlcaption
                </span>
                <input
                  class="form-control optionInfo__input"
                  data-testid="input3"
                  placeholder="caption"
                  type="text"
                  value="caption"
                />
              </div>
            </div>
            <div
              class="text-center align-self-start"
            >
              <button
                class="btn borderless btn-primary"
                style="color: rgb(255, 255, 255);"
              >
                Create New Alert
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
